# gnucash-gcg

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  PyPi.md  README.md  SPEC.md  TODO.md  pyproject.toml
.github/workflows/: gcg.yml  gcg.yml~
docker/: Dockerfile  compose.yml  docker-manage.sh
docker/stuff/: entrypoint.sh  packages-dev.sh  packages-runtime.sh
gcg/: __init__.py  __main__.py  book.py  cache.py  cli.py  config.py  currency.py  output.py  repl.py  shared.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_config.py  test_currency.py  test_integration.py  test_output.py  test_repl.py
