[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gcg"
dynamic = ["version"]
description = "Grep-like search and reporting for GnuCash SQLite books"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "GCG Contributors"}
]
keywords = ["gnucash", "accounting", "cli", "search", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "piecash>=1.2.0",
    "tabulate>=0.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
repl = [
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
gcg = "gcg.cli:main"

[project.urls]
Homepage = "https://github.com/JeffAbrahamson/gnucash-gcg"
Documentation = "https://github.com/JeffAbrahamson/gnucash-gcg#readme"
Repository = "https://github.com/JeffAbrahamson/gnucash-gcg"
Issues = "https://github.com/JeffAbrahamson/gnucash-gcg/issues"

[tool.setuptools_scm]
version_file = "gcg/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcg*"]

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --disable-warnings"
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
]
